# MultiCompMesher

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
example/: ER.off  PSD.off  Spine.off  boundaries.txt  components.txt  output.mesh  sizefields.txt  sphere-output.mesh  sphere_sizefield.txt  surface-output.mesh  surface_sizefield.txt
src/: MultiCompMesher.cpp  mesh_repair.h  utility.h
